--- a/style.css
+++ b/style.css
@@ -1,80 +1,105 @@
 body {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, sans-serif;
-  margin: 0;
-  padding: 0;
-  color: #80DDFF;
-  background-color: #200080FF;
+  /* Boshlang'ich mavzu */
+  --bg-image: url('assets/picture/background_dark2.jpg');
+  --bg-color: black;
+  --text-color: white;
 }
 
-header {
+.mid-theme {
+  /* Odatiy mavzu */
+  --bg-image: url('assets/picture/background_dark2.jpg');
+  --bg-color: black;
+  --text-color: white;
+}
+
+.dark-theme {
+  /* Tun vaqti mavzu */
+  --bg-image: url('assets/picture/background_dark.jpg');
+  --bg-color: black;
+  --text-color: white;
+}
+
+.light-theme {
+    /* Kunduzgi mavzu */
+    --bg-image: url('assets/picture/background_light2.jpg');
+    --bg-color: white;
+    --text-color: black;
+}
+
+.header-container {
   display: flex;
   justify-content: space-between;
-  position: fixed;
-  width: 100%;
-  backdrop-filter: blur(10px);
-}
-
-.header-left {
+  align-items: center;
   padding: 20px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 24px;
+  backdrop-filter: blur(20px);
 }
 
-.header-left h1 {
-  margin: 0;
+.header-name {
+  font-size: 24px;
+  font-weight: bold;
 }
 
-.header-left p {
-  margin: 5px 0;
-}
-
-.header-right {
-  align-self: center;
-}
-
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav li {
-  display: inline-block;
-}
-
-nav li a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
+.header-nav a {
+  margin-left: 20px;
   text-decoration: none;
 }
 
-nav li a:hover {
-    color:white; 
-    background-color:black; 
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.72);
+  border-radius: 24px;
+  backdrop-filter: blur(20px);
+}
+
+.footer-socials ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-socials li {
+  margin-bottom: 10px;
+}
+
+.footer-socials img {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
 }
 
 main {
-    padding-top:calc(20px + (14px *2)); 
-    padding-bottom:20px; 
+  /* max-width: 1000px; */
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 24px;
+  backdrop-filter: blur(20px);
 }
 
 section {
-    min-height: calc(100vh - (20px *2) - (10px *2));
-    background-image:url(assets/picture/background.jpg);
-    background-size: cover; 
-    background-repeat:no-repeat; 
-    background-position:center center; 
+  margin-bottom: 40px;
+}
+
+body {
+    /* background-size: cover; */
     background-attachment: fixed; 
+    background-color: var(--bg-color);
+    color: var(--text-color);    
+    backdrop-filter: blur(20px);
 }
 
-section h2 {
-    margin-top:0; 
-    color:white; 
-    text-shadow:black -1px -1px, black -1px -1px, black -1px -1px, black -1px -1px; 
-}
-
-footer {
-    background-color:#000000; 
-    color:white; 
-    padding:10px; 
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: var(--bg-image);
+  background-size: cover;
+  filter: blur(10px);
 }
